# lan-vpn

./: .gitignore  ca.sh  client.template.conf  common.sh  server.template.conf  up.sh  vpn.yaml
.devcontainer/: Dockerfile  devcontainer.json
tools/: BUILD.bazel  WORKSPACE  start.sh
tools/exporter/: BUILD.bazel  deps.bzl  go.mod
tools/exporter/cmd/openvpn_exporter/: BUILD.bazel  main.go
tools/exporter/openvpn/: BUILD.bazel  status.go  status_test.go
tools/exporter/openvpn/testdata/: status3
