load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_library(
    name = "openvpn_exporter_lib",
    srcs = ["main.go"],
    importpath = "github.com/kleinpa/lan-vpn/tools/exporter/cmd/openvpn_exporter",
    visibility = ["//visibility:private"],
    deps = [
        "//exporter/openvpn",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
    ],
)

go_binary(
    name = "openvpn_exporter",
    embed = [":openvpn_exporter_lib"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "openvpn_exporter_image",
    binary = ":openvpn_exporter",
)
